# etf-tracker

./: .gitignore  Plan.md  README.md  TECH_DESIGN.md  package-lock.json  package.json
src/: app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/data/: etf_master.json  market_calendar.json
src-tauri/migrations/: 001_init.sql
src-tauri/src/: commands.rs  lib.rs  main.rs
src-tauri/src/alert/: mod.rs
src-tauri/src/calendar/: holidays.rs  mod.rs  schedule.rs
src-tauri/src/db/: mod.rs  models.rs
src-tauri/src/logging/: mod.rs
src-tauri/src/models/: mod.rs
src-tauri/src/notification/: mod.rs
src-tauri/src/polling/: mod.rs
src-tauri/src/providers/: mod.rs  naver.rs  normalizer.rs  yahoo.rs
src/lib/api/: tauri.ts
src/lib/components/: AlertSettings.svelte  DisclaimerModal.svelte  EtfDetailPanel.svelte  EtfGrid.svelte  EtfListPanel.svelte  MarketBar.svelte  PositionPanel.svelte  PositionSummary.svelte  ProviderBanner.svelte  QuoteGrid.svelte  SearchPanel.svelte  StatusBadge.svelte
src/lib/stores/: index.ts  theme.ts
src/lib/styles/: theme.css
src/lib/types/: index.ts
src/routes/: +page.svelte
