[package]
name = "etf-tracker"
version = "0.1.0"
description = "Desktop ETF Data Tracker"
authors = ["enunonn"]
edition = "2021"

[lib]
name = "etf_tracker_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri core
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-notification = "2"
tauri-plugin-dialog = "2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# SQLite
rusqlite = { version = "0.31", features = ["bundled", "backup"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = "1"
thiserror = "2"

# Async trait
async-trait = "0.1"

# HTML scraping (Naver Finance)
scraper = "0.22"
regex = "1"

# EUC-KR → UTF-8 변환 (네이버 API 응답)
encoding_rs = "0.8"